last commit for now few layout issues to fix still

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -418,7 +418,7 @@
 
 @media screen and (min-width: 800px) {
   body {
-    background-image: url('/client/public/iron-1920-x-1200-background-jxjs64erc215wfnm.jpg');
+    background-image: url('../client/public/iron-1920-x-1200-background-jxjs64erc215wfnm.jpg');
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
@@ -441,6 +441,108 @@
   }
 
   .checked-in {
-    color: red;
+    color: mediumseagreen !important;
   }
+
+  .post-img {
+    width: 100%;
+  }
+
+  .mt50 {
+    margin-top: 50%;
+  }
+
+  .nav {
+    --bs-nav-link-padding-y: 0 !important;
+  }
+
+  .wh100 {
+    width: 100%;
+    height: 100%;
+  }
+  .border-blue {
+    border: 2px solid mediumseagreen;
+    border-radius: 4px;
+    margin-bottom: 10px;
+  }
+  .close-btn {
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    top: -65px;
+    right: 0;
+    margin-top: 10px;
+  }
+  .menu-option {
+    background-color: #1A1A1A;
+    padding: 15px;
+    text-align: center;
+    margin: 5px 0;
+    border-radius: 6px;
+  }
+  .friend-btn {
+    margin: 30px 10px 0;
+    height: 15vh;
+    text-align: start;
+    display: flex;
+    justify-content: space-between;
+    background-color: mediumseagreen
+  }
+  .see-all-btn {
+    margin: 10px;
+    height: 5vh;
+    background-color: mediumseagreen;
+    
+  }
+  .program-btn {
+    margin: 10px;
+    height: 18vh;
+    width: 100vw;
+    background-color: mediumseagreen;
+  }
+  .friends-container {
+    max-height: 50vh;
+    overflow-y: auto;
+    white-space: nowrap;
+  }
+  .my-friend-card {
+    margin: 15px 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    padding: 30px 15px;
+    text-decoration: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1A1A1A;
+  }
+  
+  .form-control {
+    border-radius: 6px !important;
+  }
+
+  .workout-btn {
+    margin: 10px;
+    padding: 15px;
+    height: 20vh;
+    background-color: mediumaquamarine;
+  }
+
+  .modal-btn {
+    margin: 0 0 5px;
+    min-height: 5vh;
+    background-color: mediumaquamarine;
+    flex: 1;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .current-program-btn {
+    display: flex;
+    width: 100%;
+    height: 20vh;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5px;
+  }
+
 }
